christmas-shop/src/js/components/about/about.module.scss
@import '../../../styles/mixins.scss';
@import '../../../styles/variables.scss';

.aboutSection {
  padding: 60px 82px;
  @include snowBack;
}

.aboutContent {
  width: 100%;
  height: 100%;
  background-color: $static-white;
  display: flex;
  border-radius: 20px;
}

.aboutDescriptionBlock {
  padding: 160px 152px 160px 60px;
  flex-basis: 50%;
}

.descriptionTitle {
  @include caption;
  margin-bottom: 20px;
}

.descriptionCongratulation {
  @include header2;
  margin-bottom: 20px;
}

.descriptionText {
  @include paragraph;
}

.aboutImg {
  flex-basis: 50%;
  border-radius: 20px;
  background: url('../../../img/santa.png');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

